[package]
name = "js-utils"
version = "0.1.1"
authors = ["zduny <dzduniak@gmail.com>"]
edition = "2021"
description = "Useful utilities to make development of browser-targeted Rust applications slightly less painful."
license = "Apache-2.0"
repository = "https://github.com/zduny/js-utils"
documentation = "https://docs.rs/js-utils/"
keywords = ["js", "javascript", "wasm", "browser", "web"]

[features]
default = ["panic_hook", "spawn", "sleep", "queue", "event"]
spawn = ["futures", "wasm-bindgen-futures"]
sleep = ["futures", "fluvio-wasm-timer"]
queue = ["futures"]
event = ["futures"]
panic_hook = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.83"
console_error_panic_hook = { version = "0.1.7", optional = true }
futures = { version = "0.3.25", optional = true }
wasm-bindgen-futures = { version = "0.4.33", optional = true }
fluvio-wasm-timer = { version = "0.2.5", optional = true }

[dependencies.web-sys]
version = "0.3.60"
features = [
    "Window",
    "Document",
    "HtmlElement",
]

[dev-dependencies]
wasm-bindgen = "0.2.83"
wasm-bindgen-test = "0.3.33"

[dev-dependencies.web-sys]
version = "0.3.60"
features = [
    "MouseEvent"
]
