[package]
name = "js-utils"
version = "0.2.0"
authors = ["zduny <dzduniak@gmail.com>"]
edition = "2021"
description = "Useful utilities to make development of browser-targeted Rust applications slightly less painful."
license = "Apache-2.0"
repository = "https://github.com/zduny/js-utils"
documentation = "https://docs.rs/js-utils/"
keywords = ["js", "javascript", "wasm", "browser", "web"]

[features]
default = ["panic_hook", "spawn", "sleep", "queue", "event"]
spawn = ["futures", "wasm-bindgen-futures"]
sleep = ["futures", "zduny-wasm-timer"]
queue = ["futures"]
event = ["futures"]
panic_hook = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2"
console_error_panic_hook = { version = "0.1", optional = true }
futures = { version = "0.3", optional = true }
wasm-bindgen-futures = { version = "0.4", optional = true }
zduny-wasm-timer = { version = "0.2", optional = true }

[dependencies.web-sys]
version = "0.3"
features = [
    "Window",
    "Document",
    "HtmlElement",
]

[dev-dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-test = "0.3"

[dev-dependencies.web-sys]
version = "0.3"
features = [
    "MouseEvent"
]
